libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__TupleOptional::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface TupleOptional {
	optional?: [number, number];
}
