libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__TupleSingle-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface TupleSingle {
	single: [number];
}
