libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__User::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface User {
	id: UserId;
	roles: RoleId[];
}
