libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__UserId::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
import type { Brand } from "@local/advanced-types/brand";
export type UserId = Brand<ActorEntityUuid & WebId, "UserId">;
