libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__Web::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface Web {
	id: WebId;
	shortname?: string;
	roles: WebRoleId[];
}
