libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__WebId::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
import type { Brand } from "@local/advanced-types/brand";
export type WebId = Brand<ActorGroupEntityUuid, "WebId">;
