libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__WebRole::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface WebRole {
	id: WebRoleId;
	webId: WebId;
	name: RoleName;
}
