libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__WebRoleId::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
import type { Brand } from "@local/advanced-types/brand";
export type WebRoleId = Brand<string, "WebRoleId">;
